Inserted the path from http://devnet.jetbrains.com/message/5301809 with custom changes.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -59,5 +59,7 @@
                                       implementationClass="org.thymeleaf.extras.idea.structure.HbStructureViewFactory"/>
         <annotator language="Handlebars"
                    implementationClass="org.thymeleaf.extras.idea.inspections.HbBlockMismatchInspection"/>
+        <html.scriptContentProvider language="Handlebars" implementationClass="org.thymeleaf.extras.idea.HbScriptContentProvider"/>
+        <languageInjector implementation="org.thymeleaf.extras.idea.psi.HbLanguageInjector"/>
     </extensions>
 </idea-plugin>
