--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -59,6 +59,12 @@
                                       implementationClass="org.thymeleaf.extras.idea.structure.HbStructureViewFactory"/>
         <annotator language="Handlebars"
                    implementationClass="org.thymeleaf.extras.idea.inspections.HbBlockMismatchInspection"/>
+
+        <!-- Dialect descriptor files -->
+        <standardResourceProvider implementation="org.thymeleaf.extras.idea.dialect.ThymeleafDialectSchemaProvider"/>
+        <standardResourceProvider implementation="org.thymeleaf.extras.idea.dialect.ThymeleafDefaultDialectsProvider"/>
+
+        <!-- Documentation / Quick Info -->
         <lang.documentationProvider language="HTML"
                                     implementationClass="org.thymeleaf.extras.idea.ThymeleafXmlDocumentationProvider"/>
         <lang.documentationProvider language="XHTML"
