First experimental step to providing element documentation, this time only for the th:inline attribute processor.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -64,6 +64,11 @@
         <standardResourceProvider implementation="org.thymeleaf.extras.idea.dialect.ThymeleafDialectSchemaProvider"/>
         <standardResourceProvider implementation="org.thymeleaf.extras.idea.dialect.ThymeleafDefaultDialectsProvider"/>
 
+        <dom.fileDescription implementation="org.thymeleaf.extras.idea.dialect.xml2.DialectDomFileDescription"/>
+
+        <dom.implementation interfaceClass="org.thymeleaf.extras.idea.dialect.xml2.DialectItem"
+                            implementationClass="org.thymeleaf.extras.idea.dialect.xml2.impl.DialectItemImpl"/>
+
         <!-- Documentation / Quick Info -->
         <lang.documentationProvider language="HTML"
                                     implementationClass="org.thymeleaf.extras.idea.ThymeleafXmlDocumentationProvider"/>
