The injection of the Thymeleaf fragment selector language into the xml attributes th:include and th:substituteby is working now.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -59,7 +59,8 @@
                 implementation="org.thymeleaf.extras.idea.html.ThymeleafAttributeDescriptorsProvider"/>
 
         <!-- Fragment selection parser -->
-        <lang.parserDefinition language="ThFragmentSelector"
+        <lang.parserDefinition language="ThFS"
                                implementationClass="org.thymeleaf.extras.idea.fragment.selection.FragmentSelectorParserDefinition"/>
+        <multiHostInjector implementation="org.thymeleaf.extras.idea.html.XmlFragmentSelectorInjector"/>
     </extensions>
 </idea-plugin>
