Created a simple completion contributor for template names inside fragment selectors.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -62,5 +62,7 @@
         <lang.parserDefinition language="ThFS"
                                implementationClass="org.thymeleaf.extras.idea.fragment.selection.FragmentSelectorParserDefinition"/>
         <multiHostInjector implementation="org.thymeleaf.extras.idea.html.XmlFragmentSelectorInjector"/>
+        <completion.contributor language="ThFS"
+                                implementationClass="org.thymeleaf.extras.idea.fragment.selection.completion.FragmentSelectorCompletionContributor"/>
     </extensions>
 </idea-plugin>
