Added a ThymeleafViewResolverFactory that helps the Spring plugin discover the thymeleaf views.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,7 +17,10 @@
     ]]>
     </change-notes>
     <version>0.7</version>
+
     <depends>com.intellij.modules.lang</depends>
+    <depends optional="true" config-file="thymeleaf-spring.xml">com.intellij.spring</depends>
+
     <vendor logo="/icons/handlebars_icon.png" url="https://github.com/dmarcotte">dmarcotte</vendor>
 
     <idea-version since-build="107.105"/>
