Added an inspection for hardcoded resource urls (@src given, but not @th:src).

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -71,6 +71,7 @@
                 implementation="org.thymeleaf.extras.idea.editor.xml.DialectXmlAttributeDescriptorsProvider"/>
         <xml.schemaProvider implementation="org.thymeleaf.extras.idea.editor.xml.DialectXmlSchemaProvider"/>
 
+        <localInspection implementationClass="org.thymeleaf.extras.idea.inspection.HardcodedResourceUrlInspection">
 
         <!-- Language injection for XML/HTML/XHTML attributes -->
         <multiHostInjector implementation="org.thymeleaf.extras.idea.editor.xml.AttributeProcessorSyntaxInjector"/>
