--- a/resources/messages/ThymeleafBundle.properties
+++ b/resources/messages/ThymeleafBundle.properties
@@ -1,2 +1,4 @@
 annotators.html.goto.fragment.declaration=Goto fragment declaration
 annotators.html.goto.fragment.declaration.not.found=No matching fragment declaration found
+template.inspection.hardcoded.resource.url.display.name=Hardcoded Resource URL
+template.inspection.group.name=Thymeleaf
