--- a/resources/messages/ThymeleafBundle.properties
+++ b/resources/messages/ThymeleafBundle.properties
@@ -1,4 +1,5 @@
 annotators.html.goto.fragment.declaration=Goto fragment declaration
 annotators.html.goto.fragment.declaration.not.found=No matching fragment declaration found
 template.inspection.hardcoded.resource.url.display.name=Hardcoded Resource URL
+template.inspection.non.localized.text.display.name=Non Localized Text
 template.inspection.group.name=Thymeleaf
