--- a/src/META-INF/plugin.xml
+++ b/src/META-INF/plugin.xml
@@ -21,7 +21,7 @@
     <resource-bundle>resources.messages.ThymeleafBundle</resource-bundle>
 
     <depends>com.intellij.modules.lang</depends>
-    <depends optional="true" config-file="thymeleaf-web.xml">com.intellij.javaee</depends>
+    <!--<depends>com.intellij.spring</depends>-->
     <depends optional="true" config-file="thymeleaf-spring-mvc.xml">com.intellij.spring.mvc</depends>
     <depends optional="true" config-file="thymeleaf-properties.xml">com.intellij.properties</depends>
 
